chore: use mapstruct mappers for generated apis